--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ $(document).ready(function(){
 <!--headlines s-->
 <div class="w1280 m_center">
   <div class="headlines" id="tt">
-    <div class="xwzxdd-dbt"><div class='advert_or'><div class='advert_or_text'><a href='https://www.ah.chinanews.com.cn/news/2024/0819/329453.shtml' style='color:#000' target='_blank'>安徽合肥至韩国首尔国际航线复航</a></div></div></div>
+    <div class="xwzxdd-dbt"><div class='advert_or'><div class='advert_or_text'><a href='https://www.ah.chinanews.com.cn/news/2024/0819/329453.shtml' style='color:#000; font-weight: bold; opacity: 80%;' target='_blank'>安徽合肥至韩国首尔国际航线复航</a></div></div></div>
     <div class="xwzxdd-xbt">·<a href="/news/2024/0819/329453.shtml" TARGET=_blank>安徽合肥至韩国首尔国际航线复航</a></div>
   </div>
 </div>
